--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "md5": "^2.2.1",
+    "randomstring": "^1.1.5"
   },
   "scripts": {
     "start": "node index.js",
