--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
-    "morgan": "^1.7.0",
     "md5": "^2.2.1",
+    "mongoose": "^4.9.4",
+    "morgan": "^1.7.0",
     "randomstring": "^1.1.5"
   },
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
     "test": "mocha --opts mocha.opts src/**/*.spec.js",
+    "testxunit": "mocha -R xunit src/**/*.spec.js",
     "test:watch": "npm run test -- -w"
   },
   "devDependencies": {
