--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
-    "randomstring": "^1.1.5"
+    "randomstring": "^1.1.5",
+    "redis": "^2.7.1"
   },
   "scripts": {
     "start": "node index.js",
