--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.13.3",
     "express-session": "^1.15.2",
+    "jsonwebtoken": "^7.4.0",
     "md5": "^2.2.1",
     "mongoose": "^4.9.4",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-jwt": "^2.2.1",
     "randomstring": "^1.1.5",
     "redis": "^2.7.1"
   },
