--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "cloudinary": "^1.8.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.3",
     "express-session": "^1.15.2",
@@ -15,6 +16,7 @@
     "md5": "^2.2.1",
     "mongoose": "^4.9.4",
     "morgan": "^1.7.0",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-jwt": "^2.2.1",
@@ -22,7 +24,7 @@
     "redis": "^2.7.1"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "export CLOUDINARY_URL='cloudinary://867619293267157:ztKtY-_ItC_GlKiRJG1ku-z9sKw@htz28o3q1';node index.js",
     "watch": "nodemon index.js",
     "test": "mocha --opts mocha.opts src/**/*.spec.js",
     "testxunit": "mocha -R xunit src/**/*.spec.js",
